<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Attendance</string>
    <string name="url">http://www.android10.org/</string>

    <string name="activity_title_user_list">Users List</string>
    <string name="activity_title_user_details">User Details</string>

    <string name="btn_text_load_data">Load Sample Data</string>
    <string name="btn_text_retry">Retry</string>

    <string name="view_text_email">Email:</string>
    <string name="view_text_followers">Followers:</string>
    <string name="view_text_description">Description:</string>

    <string name="string_content_description">Non accessible view</string>

    //Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
    <string name="etherium">Etherium</string>
    <string name="trade_volume">24H Trade Volume</string>
    <string name="news_api_key">88e7f5465886433fa0a0bffca8947d2e</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="password_number_hint">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_reports">Reports</string>
    <string name="title_manage">Manage</string>
    <string name="title_profile">Profile</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="company_name_hint">Company name</string>
    <string name="mobile_number_hint">Mobile number</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_otp">Enter OTP you received on your mobile</string>
    <string name="verify">Verify code</string>
    <string name="resend_sms">Resend code</string>
    <string name="didnt_receive_otp">Didn\'t receive OTP?</string>
    <string name="contact">Contact:</string>
    <string name="parent_name">Parent Name:</string>
    <string name="checkin">Check-in:</string>
    <string name="action_detail_log">Detail Log</string>
    <string name="verification">Verification</string>
    <string name="code_sent">Code was sent to %s</string>
    <string name="ok">Ok</string>
    <string name="wait_for_fifteen_sec">Wait for</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="login_text">Send OTP</string>
    <string name="alertsign">Alert!</string>
    <string name="please_enter_phone_number">Please enter phone number!</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>

</resources>
