<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/thirty_three_dp"
        android:layout_marginStart="@dimen/thirty_three_dp"
        android:layout_marginRight="@dimen/thirty_three_dp"
        android:layout_marginEnd="@dimen/thirty_three_dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/four_dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourty_dp"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:textColor="@color/fontPrimaryText"
                android:textSize="@dimen/font_normal"
                android:background="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:background="@color/divider"
            android:layout_marginBottom="@dimen/twenty_dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/four_dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourty_dp"
                android:hint="@string/email_hint"
                android:inputType="text"
                android:textColor="@color/fontPrimaryText"
                android:textSize="@dimen/font_normal"
                android:background="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:background="@color/divider"
            android:layout_marginBottom="@dimen/twenty_dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/four_dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editText_company_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourty_dp"
                android:hint="@string/company_name_hint"
                android:inputType="text"
                android:textColor="@color/fontPrimaryText"
                android:textSize="@dimen/font_normal"
                android:background="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:background="@color/divider"
            android:layout_marginBottom="@dimen/twenty_dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/four_dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editText_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourty_dp"
                android:hint="@string/mobile_number_hint"
                android:inputType="phone"
                android:textColor="@color/fontPrimaryText"
                android:textSize="@dimen/font_normal"
                android:background="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:background="@color/divider"
            android:layout_marginBottom="@dimen/twenty_dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/four_dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editText_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/fourty_dp"
                android:hint="@string/password_number_hint"
                android:inputType="textPassword"
                android:textColor="@color/fontPrimaryText"
                android:textSize="@dimen/font_normal"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView_show_password"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_show" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:background="@color/divider"
            android:layout_marginBottom="@dimen/sixty_dp" />

        <TextView
            android:id="@+id/textView_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:inputType="number"
            android:background="@drawable/button_pressed"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/fontColorWhite"
            android:textSize="@dimen/font_large"
            android:text="@string/sign_up" />

    </LinearLayout>
</RelativeLayout>

