<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:background="@color/white"
    >

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_height="376dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/thirty_three_dp"
        android:layout_marginStart="@dimen/thirty_three_dp"
        android:layout_marginRight="@dimen/thirty_three_dp"
        android:layout_marginEnd="@dimen/thirty_three_dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/thirty_three_dp">

            <ImageView
                android:id="@+id/imageView_logo"
                android:layout_width="@dimen/ninty_dp"
                android:layout_height="@dimen/ninty_dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/eighteen_dp"
                tools:src="@mipmap/ic_logo" />

            <TextView
                android:id="@+id/textView_login_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/fontPrimaryText"
                android:textSize="@dimen/font_x_large"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:singleLine="true"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/four_dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editText_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:textColor="@color/fontPrimaryText"
                android:textSize="@dimen/font_normal"
                android:drawableLeft="@drawable/ic_action_phone"
                android:drawableStart="@drawable/ic_action_phone"
                android:drawablePadding="@dimen/four_dp"
                android:background="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:background="@color/divider"
            android:layout_marginBottom="@dimen/twenty_dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/four_dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editText_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/fourty_dp"
                android:hint="@string/password_number_hint"
                android:inputType="textPassword"
                android:textColor="@color/fontPrimaryText"
                android:textSize="@dimen/font_normal"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_action_password"
                android:drawableLeft="@drawable/ic_action_password"
                android:drawablePadding="@dimen/four_dp"
                />

            <ImageView
                android:id="@+id/imageView_show_password"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_show" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:background="@color/divider"
            android:layout_marginBottom="@dimen/twenty_five_dp" />


        <TextView
            android:id="@+id/textView_Login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:inputType="number"
            android:background="@drawable/button_pressed"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/fontColorWhite"
            android:textSize="@dimen/font_normal"
            android:text="@string/sign_in"
            android:layout_marginBottom="@dimen/twenty_five_dp"/>

        <TextView
            android:id="@+id/textView_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:inputType="number"
            android:background="@drawable/button_pressed_signup"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/fontPrimaryText"
            android:textSize="@dimen/font_normal"
            android:text="@string/sign_up" />
    </LinearLayout>


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


</LinearLayout>